--- a/README
+++ b/README
@@ -1,5 +1,18 @@
 This script allows Google Docs to perform Syntax Highlighting on a given selected text.
 
+TO INSTALL:
+1. Open a Google Docs Document
+2. Go to Tools -> Script Manager...
+3. Click 'New'
+4. Select 'Blank Project'
+5. Copy the contents of 'SyntaxHighlighing.js' into Code.gs, replacing all given text
+6. Go to File -> Save
+7. In the script editor, go to File -> New Script File
+8. Name it 'StylesBase'
+9. Copy the contents of 'StylesBase.js' into this document, replacing the default text
+10. Save again
+11. Return to your document, and refresh it. The 'Syntax Coloring' menu should now have appeared.s
+
 Currently Supported Languages:
 * JavaScript
 * Python
