--- a/README
+++ b/README
@@ -5,13 +5,13 @@ TO INSTALL:
 2. Go to Tools -> Script Manager...
 3. Click 'New'
 4. Select 'Blank Project'
-5. Copy the contents of 'SyntaxHighlighing.js' into Code.gs, replacing all given text
+5. Copy the contents of 'main.js' into Code.gs, replacing all given text
 6. Go to File -> Save
 7. In the script editor, go to File -> New Script File
 8. Name it 'StylesBase'
-9. Copy the contents of 'StylesBase.js' into this document, replacing the default text
+9. Copy the contents of 'stylesBase.js' into this document, replacing the default text
 10. Save again
-11. Return to your document, and refresh it. The 'Syntax Coloring' menu should now have appeared.s
+11. Return to your document, and refresh it. The 'Syntax Coloring' menu should now have appeared.
 
 Currently Supported Languages:
 * JavaScript
